
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ png_structp ;
typedef char* png_const_charp ;
typedef int Throw ;


 int fprintf (int ,char*,char*) ;
 int stderr ;

__attribute__((used)) static void
png_cexcept_error(png_structp png_ptr, png_const_charp msg)
{
   if(png_ptr)
     ;



   {
      Throw msg;
   }
}
